[package]
name = "git-gum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
colored = { version = "2.0.0" }
console = "0.15.1"
dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }
regex = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.2"
