[package]
name = "gust"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
colored = { version = "2.0.0" }
confy = "0.5.1"
console = "0.15.1"
dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }
dirs-next = "2.0.0"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.2"
